Add: Add function add new user, create user for admin
